--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,14 @@
+# Local database variables
 DB_NAME='it_crowd'
 DB_USER='root'
 DB_PASSWORD=
 DB_PORT='3306'
+JWT_SECRET='SECRET'
+
+# Server database variables
+DB_NAME='bwtmjq8bzb5wzfubaica'
+DB_USER='u0pn5ii7mlhvpszb'
+DB_PASSWORD="OfwuJBa6ZjwGL1r7LkPU"
+DB_PORT='3306'
+DB_HOST="bwtmjq8bzb5wzfubaica-mysql.services.clever-cloud.com"
 JWT_SECRET='SECRET'
